--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -6,4 +6,5 @@ en:
   label_wiki_page: "wiki page"
   label_issue_generated_count: "issue generated count"
   label_root_issue: "root issue"
+  wiki_to_issue_title: "wiki to issue"
 
